v.0.4.12 currency as readonly for ledger, year and default server update
v.0.4.12 currency as readonly for ledger, year and default server update

--- a/index.html
+++ b/index.html
@@ -961,7 +961,7 @@ a:hover {
 
         <fieldset class="server">
           <div>
-            <input type="text" id="server" placeholder="Enter XRPL ws here" value="wss://s1.ripple.com" spellcheck="false" class="bordered-centered" />
+            <input type="text" id="server" placeholder="Enter XRPL ws here" value="wss://xrpl.ws" spellcheck="false" class="bordered-centered" />
             <button type="button" id="server_connect" class="server-not-connected">Connect</button>
             <div class="feedback" id="server_feedback"></div>
           </div>
@@ -1071,15 +1071,14 @@ a:hover {
               </div>
               <div>
                 <div class="left">Amount:</div>
-                <div class="right"><input type="text" id="payment_amount" spellcheck="false" /></div>
+                <div class="right">
+                  <input type="text" id="payment_amount" spellcheck="false" />
+                </div>
               </div>
               <div>
                 <div class="left">Currency:</div>
-                <div class="right secret-fields mnemonic-fields hidden">
+                <div class="right">
                   <input type="text" id="payment_currency" value="XRP" spellcheck="false" />
-                </div>
-                <div class="right hw-fields hidden">
-                  <input type="text" id="payment_currency" value="XRP" spellcheck="false" readonly="readonly"/>
                 </div>
               </div>
               <div class="secret-fields mnemonic-fields hidden">
@@ -1300,7 +1299,7 @@ a:hover {
                 <div class="orange note">
                   Here you can assign another keypair to manage your account.<br><br>
                   <span class="red">
-                    DANGER: You may lose all your XRP and other assets if you assign an address you are not in control of. 
+                    DANGER: You may lose all your XRP and other assets if you assign an address you are not in control of.
                     Please do not use this tool unless you know what you are doing!
                   </span>
                 </div>
@@ -1311,12 +1310,12 @@ a:hover {
                   Here you can assign/remove sets of accounts can be used to sign a transaction on behalf of this account using multisigning.
                 </div>
                 <div class="note red">
-                  DANGER: You may lose all your XRP and other assets if you assign addresses you are not in control of. 
+                  DANGER: You may lose all your XRP and other assets if you assign addresses you are not in control of.
                   Please do not use this tool unless you know what you are doing!
                 </div>
                 <div class="note orange">
-                  NOTE: To assign a List of Signers you need to have at least 15 XRP available. 
-                  (10 XRP + 5 XRP for each signer, for ex. 3 signers: 10 + 3*5 = 25 XRP. 
+                  NOTE: To assign a List of Signers you need to have at least 15 XRP available.
+                  (10 XRP + 5 XRP for each signer, for ex. 3 signers: 10 + 3*5 = 25 XRP.
                 </div>
                 <div class="note">
                   THRESHOLD - a target number for the signer weights. A multi-signature from this list is valid only if the sum weights of the signatures provided is equal or greater than this value.
@@ -1445,7 +1444,7 @@ a:hover {
 
               <div class="note offline-fields hidden">
                 <hr>
-                On your phone or another connected computer open a page: 
+                On your phone or another connected computer open a page:
                 <span id="submit-link" class="small">https://bithomp.com/submit</span>
                 You can use a Phone QR Reader to scan the above URL:
                 <div id="submitUrlQR" class="submitUrlQR"></div>
@@ -1513,7 +1512,7 @@ a:hover {
       <hr>
 
       <div class="footer">
-        © 2015 <span id="thisYear"> - 2018</span> <a href="http://octillion.info" target="_blank">Octillion S.A.</a> All Rights Reserved
+        © 2015 - <span id="thisYear">2020</span> <a href="http://octillion.info" target="_blank">Octillion S.A.</a> All Rights Reserved
       </div>
 
     </div>
@@ -91662,11 +91661,11 @@ if (typeof module != "undefined") {
 </script>
     <script>(function() {
 
-var version = '0.4.11';
+var version = '0.4.12';
 var testnet = false;
 var bithomp = 'https://bithomp.com';
 var bithompTestnet = 'https://test.bithomp.com';
-var wsProduction = 'wss://s3.ripple.com';
+var wsProduction = 'wss://xrpl.ws';
 var wsTestnet = 'wss://s.altnet.rippletest.net:51233';
 
 var api = new ripple.RippleAPI();
@@ -93793,7 +93792,7 @@ function addressFeedback() {
 function thisYear() {
   var d = new Date();
   var n = d.getFullYear();
-  DOM.thisYear.html(" - " + n);
+  DOM.thisYear.html(n);
 }
 
 function termsAgreed() {
@@ -93971,6 +93970,7 @@ function switchSecret() {
   if (DOM.switchSecret.is(':checked')) {
     DOM.mnemonicFields.hide();
     DOM.HwFields.hide();
+    DOM.paymentCurrency.prop('readonly', false);
     DOM.secretFields.show();
     secretChanged();
   }
@@ -93980,6 +93980,7 @@ function switchMnemonic() {
   if (DOM.switchMnemonic.is(':checked')) {
     DOM.secretFields.hide();
     DOM.HwFields.hide();
+    DOM.paymentCurrency.prop('readonly', false);
     DOM.mnemonicFields.show();
     delayedPhraseChanged();
   }
@@ -93990,6 +93991,7 @@ function switchHW() {
     DOM.secretFields.hide();
     DOM.mnemonicFields.hide();
     DOM.HwFields.show();
+    DOM.paymentCurrency.prop('readonly', true);
     //reset connection to ledgerhw
     clearAddressesList();
     hideValidationError();
