Add support for mnemonic passphrase

--- a/src/index.html
+++ b/src/index.html
@@ -355,6 +355,7 @@
 
           <div class="mnemonic-fields hidden">
             <textarea id="phrase" class="phrase" placeholder="Enter your mnemonic (e.g. 24 recovery words)"></textarea>
+            <input type="text" id="mnemonicpassphrase" placeholder="Enter your mnemonic passphrase (if required)" spellcheck="false" autocomplete="off" class="bordered-centered" />
           </div>
 
           <div class="secret-fields">
