--- a/src/index.html
+++ b/src/index.html
@@ -311,7 +311,7 @@
 
         <div class="mnemonic-fields hidden">
           <input type="text" id="bip32-path" placeholder="The BIP32 derivation path" spellcheck="false"
-            autocomplete="off" class="bordered-centered" value="m/44'/144'/0'/0" />
+            autocomplete="off" class="bordered-centered" value="m/44'/144'/0'/0/0" />
           <br /><br />
           <textarea id="phrase" class="phrase" placeholder="Enter your mnemonic (e.g. 24 recovery words)"></textarea>
           <input type="text" id="mnemonic_passphrase" placeholder="Enter your mnemonic passphrase (if required)"
